overflow style fixes

--- a/src/client/components/home/home.css
+++ b/src/client/components/home/home.css
@@ -11,8 +11,6 @@
     }
     > .wrapper {
       padding: 0;
-      overflow-x: hidden;
-      overflow-y: visible;
     }
   }
 }
