--- a/src/client/components/recent-work/particles.css
+++ b/src/client/components/recent-work/particles.css
@@ -67,7 +67,7 @@
   }
   &.dot-grid-a {
     top: -1%;
-    left: 82%;
+    left: 71%;
   }
   &.dot-grid-b {
     top: 78%;
